--- a/charts/keycloak/Chart.yaml
+++ b/charts/keycloak/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 name: sso-keycloak
-version: 1.16.0
+version: 0.0.1
 appVersion: 24.0.5-build.1
 description: Open Source Identity and Access Management For Modern Applications and Services
 dependencies:
   - name: patroni
     version: 1.6.0
-    repository: https://bcgov.github.io/sso-helm-charts
+    repository: https://bcgov.github.io/EDUC-KEYCLOAK-CHARTS
     tags:
       - patroni-enabled
