--- a/charts/patroni/values.yaml
+++ b/charts/patroni/values.yaml
@@ -7,8 +7,8 @@ image:
   tag: 3.2-p1
 
 imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
+nameOverride: sso-patroni
+fullnameOverride: sso-patroni
 
 postgresMajorVersion: 15
 
