--- a/.github/workflows/publish-image-rhbk-dev.yml
+++ b/.github/workflows/publish-image-rhbk-dev.yml
@@ -3,7 +3,7 @@ name: Create and publish Keycloak Docker image - Dev
 on:
   push:
     branches:
-      - 'feature/quarkus'
+      - 'feature/**'
 
 env:
   GITHUB_REGISTRY: ghcr.io
