--- a/docker/keycloak/Dockerfile-24
+++ b/docker/keycloak/Dockerfile-24
@@ -17,7 +17,7 @@ COPY --from=extensions-builder /tmp/services/target/bcgov-services-1.0.0.jar /op
 
 WORKDIR /opt/keycloak
 
-RUN /opt/keycloak/bin/kc.sh build
+RUN /opt/keycloak/bin/kc.sh --verbose build
 
 FROM registry.redhat.io/rhbk/keycloak-rhel9:24-17
 
