--- a/.github/workflows/publish-image-rhbk-dev.yml
+++ b/.github/workflows/publish-image-rhbk-dev.yml
@@ -52,8 +52,8 @@ jobs:
           push: true
           tags: ${{ env.GITHUB_REGISTRY }}/${{env.IMAGE_NAME}}:dev-rhbk-24
           file: docker/keycloak/Dockerfile-24
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
+          # cache-from: type=local,src=/tmp/.buildx-cache
+          # cache-to: type=local,dest=/tmp/.buildx-cache-new
 
         # Temp fix
         # https://github.com/docker/build-push-action/issues/252
